ruta para modifcar celulares swagger
